--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
               <div class="background">
                 <img src="background_event.jpg">
               </div>
-              <a href="https://arifriska.github.io/#user"><img class="circle" src="logo.png"></a>
-              <a href="https://arifriska.github.io/#name"><span class="white-text name">Rachel dan Irfan Wedding</span></a>
-              <a href="https://arifriska.github.io/#email"><span class="white-text email">1 December 2019</span></a>
+              <a href="#user"><img class="circle" src="logo.png"></a>
+              <a href="#name"><span class="white-text name">Rachel dan Irfan Wedding</span></a>
+              <a href="#email"><span class="white-text email">1 December 2019</span></a>
             </div></li>
-            <li><a href="https://arifriska.github.io/#home" class="waves-effect">Home</a></li>
-            <li><a href="https://arifriska.github.io/#about">About</a></li>
-            <li><a href="https://arifriska.github.io/#story">Our Story</a></li>
-            <li><a href="https://arifriska.github.io/#family-men">Groomsman</a></li>
-            <li><a href="https://arifriska.github.io/#family-women">Bridesmaid</a></li>
-            <li><a href="https://arifriska.github.io/#location">Lokasi</a></li>
-            <li><a href="https://arifriska.github.io/#gallery">Gallery</a></li>
+            <li><a href="#home" class="waves-effect">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#story">Our Story</a></li>
+            <li><a href="#family-men">Groomsman</a></li>
+            <li><a href="#family-women">Bridesmaid</a></li>
+            <li><a href="#location">Lokasi</a></li>
+            <li><a href="#gallery">Gallery</a></li>
           </ul>
           <a href="https://arifriska.github.io/#" data-target="slide-out" class="sidenav-trigger"><img class="circle" src="logo.png" style="position: relative; zoom: .12;top: 66px;"></a>
         </section>
@@ -72,7 +72,7 @@
         <div aria-hidden="false" style="float: none; list-style: none; position: absolute; width: 1905px; z-index: 50; display: block;"><img src="1.jpg"></div>
         <div aria-hidden="true" style="float: none; list-style: none; position: absolute; width: 1905px; z-index: 0; display: none;"><img src="2.jpg"></div>
         <div aria-hidden="true" style="float: none; list-style: none; position: absolute; width: 1905px; z-index: 0; display: none;"><img src="3.jpg"></div>
-      </div></div><div class="bx-controls bx-has-controls-direction"><div class="bx-controls-direction"><a class="bx-prev" href="https://arifriska.github.io/">Prev</a><a class="bx-next" href="https://arifriska.github.io/">Next</a></div></div></div>
+      </div></div><div class="bx-controls bx-has-controls-direction"><div class="bx-controls-direction"><a class="bx-prev" href="https://rachelirfan.github.io/">Prev</a><a class="bx-next" href="https://rachelirfan.github.io/">Next</a></div></div></div>
       <!-- Tagline -->
       <div class="tagline wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
         <div class="container">
@@ -110,7 +110,7 @@
         <div class="man clearfix wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
           <div class="photo col-md-6">
             <figure>
-              <a href="https://arifriska.github.io/#">
+              <a href="#">
                 <img src="pengantin_2.jpg" alt="" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);">
               </a>
             </figure>
@@ -118,19 +118,19 @@
           <div class="profile col-md-6">
             <h3>Rachel Gisella Maritza S.H</h3>
             <h4>Pengantin Wanita</h4>
-            <p>Putri Pertama dari Bapak Anton Herdiyanto dan Ibu Dahlia</p>
+            <p>Putri Pertama dari Bapak Anton Herdiyanto dan Ibu Dahliah</p>
           </div>
         </div>
         <div class="woman clearfix wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
           <div class="photo col-md-6">
             <figure>
-              <a href="https://arifriska.github.io/#">
+              <a href="#">
                 <img src="pengantin_1.jpg" alt="" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);">
               </a>
             </figure>
           </div>
           <div class="profile col-md-6">
-            <h3>Irfan Ilmi S.Pd</h3>
+            <h3>Irfan Hilmi S.Pd</h3>
             <h4>Pengantin Pria</h4>
             <p>Putra Kedua dari Alm. Bapak Ahmad Hidayat dan Ibu Supiah</p>
           </div>
