--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
         </div>
         <div class="list clearfix">
           <div class="col-md-4 wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
-            <img src="event_01.jpg">
+            <img src="13.jpeg" style="height: 219px;">
             <h3><span>23</span> Maret 2019</h3>
             <img src="./Arif &amp; Riska_files/ornamen_journal.png" class="ornamen_journal" alt="">
             <h5>Lamaran</h5>
           </div>
           <div class="col-md-4 wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
-            <img src="event_02.jpg">
+            <img src="8.jpg" style="height: 219px;">
             <h3><span>1</span> Desember 2019</h3>
             <img src="./Arif &amp; Riska_files/ornamen_journal.png" class="ornamen_journal" alt="">
             <h5>Akad dan Resepsi Pernikahan</h5>
