--- a/index.html
+++ b/index.html
@@ -310,7 +310,19 @@
             <a class="venobox vbox-item" data-gall="gallery" href="8.jpg"><img src="8.jpg" alt=""></a>
           </div>
           <div class="col-md-4">
-            <a class="venobox vbox-item" data-gall="gallery" href="timeline_1.jpeg"><img src="timeline_1.jpeg" alt=""></a>
+            <a class="venobox vbox-item" data-gall="gallery" href="9.jpeg"><img src="9.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="10.jpeg"><img src="10.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="11.jpeg"><img src="11.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="12.jpeg"><img src="12.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="13.jpeg"><img src="13.jpeg" alt=""></a>
           </div>
         </div>
       </div>
