--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Rachel &amp; Irfan</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="Arif dan Riska Wedding">
-  <meta name="description" content="Arif dan Riska Wedding">    
+  <meta name="title" content="Rachel and Irfan Wedding">
+  <meta name="description" content="Rachel and Irfan Wedding">    
   <meta name="image_src" content="https://cdn.sindonews.net/gambar-cover-infografis-1200x628.jpg">
   <meta name="google-site-verification" content="mFQQxfgAE-mgZvZqimPAlFO2VROmqoQi-KJ2LOfvuWE">
   <meta name="googlebot-news" content="noindex, nofollow">
@@ -14,7 +14,6 @@
   <style></style></head><body cz-shortcut-listen="true"><icon src="logo.png" platform="android" width="180" height="180">
 
   <!-- Start CSS Link From Here -->
-  <link href="./Arif &amp; Riska_files/css" rel="stylesheet"> <!-- Font -->
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="stylesheet" href="venobox.min.css"> <!-- Photoswipe -->
   <link rel="stylesheet" href="styles.css"> <!-- Styles -->
@@ -54,13 +53,13 @@
         </section>
         <a href="https://arifriska.github.io/" class="logo"><img src="./Arif &amp; Riska_files/logo.png" alt="" style="padding: 14px 0px;"></a>
         <ul id="nav-mobile" class="right">
-          <li class="active"><a href="https://arifriska.github.io/#home">Home</a></li>
-          <li><a href="https://arifriska.github.io/#about">About</a></li>
-          <li><a href="https://arifriska.github.io/#story">Our Story</a></li>
-          <li><a href="https://arifriska.github.io/#family-men">Groomsman</a></li>
-          <li><a href="https://arifriska.github.io/#family-women">Bridesmaid</a></li>
-          <li><a href="https://arifriska.github.io/#location">Lokasi</a></li>
-          <li><a href="https://arifriska.github.io/#gallery">Gallery</a></li>
+          <li class="active"><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#story">Our Story</a></li>
+          <li><a href="#family-men">Groomsman</a></li>
+          <li><a href="#family-women">Bridesmaid</a></li>
+          <li><a href="#location">Lokasi</a></li>
+          <li><a href="#gallery">Gallery</a></li>
         </ul>
       </div>
     </nav>
@@ -321,14 +320,29 @@
           <div class="col-md-4">
             <a class="venobox vbox-item" data-gall="gallery" href="12.jpeg"><img src="12.jpeg" alt=""></a>
           </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="13.jpeg"><img src="13.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="14.jpeg"><img src="14.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="15.jpeg"><img src="15.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="16.jpeg"><img src="16.jpeg" alt=""></a>
+          </div>
+          <div class="col-md-4">
+            <a class="venobox vbox-item" data-gall="gallery" href="17.jpeg"><img src="17.jpeg" alt=""></a>
+          </div>
         </div>
       </div>
     </section>
   </main>
   <footer>
     <div class="container wow fadeInUp" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeInUp;">
-      <h2>Thank You</h2>
-      <h5>For Being With Us</h5>
+      <h2 style="color: #FFF">Thank You</h2>
+      <h5 style="color: #FFF">For Being With Us</h5>
     </div>
   </footer>
   <script src="jquery-1.10.2.min.js"></script> <!-- jQuery -->
